<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">


        <LinearLayout
            android:id="@+id/registration_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_patientName"
                android:layout_below="@+id/name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name">
                <requestFocus/>
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/registration_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_Name">
            <!--android:background="#E0E0E0"-->
            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_patientAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:inputType="textPostalAddress"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registration_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Address">
            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_No"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_pateintPhoneNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_phone"
                android:maxLength="10"
                android:inputType="phone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registration_Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Phone"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_pateintAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/hint_age"/>
        </LinearLayout>
        <!--android:entries="@array/age"-->
        <LinearLayout
            android:id="@+id/registration_Sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Age"
            android:paddingTop="20dp">
            <TextView
                android:id="@+id/sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Spinner
                android:id="@+id/fill_pateintSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/sex"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registration_Village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Sex"
            android:paddingTop="20dp">
            <TextView
                android:id="@+id/village"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/village"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Spinner
                android:id="@+id/fill_pateintVillage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/registration_Dmc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Village"
            android:paddingTop="20dp">
            <TextView
                android:id="@+id/dmc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dmc"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Spinner
                android:id="@+id/fill_pateintDmc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/registration_Block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Dmc"
            android:paddingTop="20dp">
            <TextView
                android:id="@+id/block"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/block"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <!--<Spinner-->
            <!--android:id="@+id/fill_pateintBlock"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1" />-->
            <EditText
                android:id="@+id/fill_pateintBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="block"
                android:focusable="false"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/registration_District"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Block">
            <TextView
                android:id="@+id/district"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/district"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_pateintDistrict"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="district"
                android:focusable="false"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/registration_State"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_District">
            <TextView
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_pateintState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="state"
                android:focusable="false"
                android:editable="false"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/registration_Country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_State">
            <TextView
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/country"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/fill_pateintCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="country"
                android:editable="false"
                android:focusable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/registration_Country">
            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button2_border"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button2_border"
                android:text="@string/save"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>

